--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,6 @@
 {{ template "base" .}}
 {{define "content"}}
+<!-- make search for notes dissapear from login page! -->
 <div class="container">
   <form method="post">
     <div class="mb-3">
